apps/tailscale/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-tailscale
  namespace: vault
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      targetPort: 8200
  selector:
    app.kubernetes.io/name: vault
    component: server
